--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,6 +25,14 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: My-Artifacts
+          path: |
+            artifacts
+            package.json  #redundant code but just used for example
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
