--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,10 +29,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: My-Artifacts
-          path: |
-            artifacts
-            package.json
-
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
